--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
+  <meta name="7 day weather forecast app" content="search the weather forecast in your city">
   <base href="/">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -12,9 +12,7 @@
   <style>
     html,
     body {
-      background-color: #eee;
       box-sizing: border-box;
-      font-family: sans-serif;
       margin: 0;
       padding: 0;
     }
